finish-friends-tab

--- a/friends.html
+++ b/friends.html
@@ -66,7 +66,7 @@
             <div class="user-component__column">
                 <img src="https://avatars3.githubusercontent.com/u/3612017" class="user-component__avatar user-component__avatar--sm" />
                 <div class="user-component__text">
-                    <h4 class="user-component__title">Channel</h4>
+                    <h4 class="user-component__title user-component__title--not-bold">Channel</h4>
                 </div>
             </div>
             <div class="user-component__column">
@@ -101,7 +101,9 @@
             <li class="nav__btn"><a class="nav__link" href="#"><i class="fas fa-ellipsis-h fa-2x"></i></a></li>
         </ul>
     </nav>
-
+    <div id="splash-screen">
+        <i class="fas fa-comment"></i>
+    </div>
 
     <script src="https://kit.fontawesome.com/d5fbb687f5.js" crossorigin="anonymous"></script>
 </body>
