--- a/friends.html
+++ b/friends.html
@@ -105,6 +105,10 @@
         <i class="fas fa-comment"></i>
     </div>
 
+    <div id="no-mobile">
+        <span>Your screen is too big</span>
+    </div>
+
     <script src="https://kit.fontawesome.com/d5fbb687f5.js" crossorigin="anonymous"></script>
 </body>
 </html>
