--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
         <a href="#">Find Kokoa Account or Password</a>
     </form>
 
-
+    <div id="no-mobile">
+        <span>Your screen is too big</span>
+    </div>
+    
     <script src="https://kit.fontawesome.com/d5fbb687f5.js" crossorigin="anonymous"></script>
 </body>
 </html>
